Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37809

MSAN use-of-uninitialized-value in wsrep_xid_print

    XMLWordPrintable

Details

    • Not for ES Release Notes
    • Q4/2025 Galera Maintenance

    Description

      after fix from MDEV-35068, further MSAN errors in wsrep_xid_print.

      ==418706==WARNING: MemorySanitizer: use-of-uninitialized-value
          #0 0x5596c8b569b6 in wsrep_xid_print(xid_t const*) /source/sql/wsrep_xid.cc:257:56
          #1 0x5596c8b555eb in get_SE_checkpoint(THD*, st_plugin_int*, void*) /source/sql/wsrep_xid.cc:151:5
          #2 0x5596c7af7ee1 in plugin_foreach_with_mask(THD*, char (*)(THD*, st_plugin_int*, void*), int, unsigned int, void*) /source/sql/sql_plugin.cc:2558:15
          #3 0x5596c8b55dab in wsrep_get_SE_checkpoint(xid_t&) /source/sql/wsrep_xid.cc:158:10
          #4 0x5596c8b55dab in wsrep_get_SE_checkpoint_common(xid_t&) /source/sql/wsrep_xid.cc:166:7
          #5 0x5596c8b5609b in wsrep_server_gtid_t wsrep_get_SE_checkpoint<wsrep_server_gtid_t>() /source/sql/wsrep_xid.cc:204:8
          #6 0x5596c8b60ae5 in wsrep_init_gtid() /source/sql/wsrep_mysqld.cc:368:36
          #7 0x5596c8b60ae5 in wsrep_init_globals() /source/sql/wsrep_mysqld.cc:830:3
          #8 0x5596c7722d2a in mysqld_main(int, char**) /source/sql/mysqld.cc:5946:7
          #9 0x7f68e5b73ca7  (/lib/x86_64-linux-gnu/libc.so.6+0x29ca7) (BuildId: def5460e3cee00bfee25b429c97bcc4853e5b3a8)
          #10 0x7f68e5b73d64 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x29d64) (BuildId: def5460e3cee00bfee25b429c97bcc4853e5b3a8)
          #11 0x5596c767bf60 in _start (/build/sql/mariadbd+0x7b8f60) (BuildId: b5916fdc43d36775ed295ebd724239356f70cf34)
       
        Uninitialized value was created by an allocation of 'xid' in the stack frame
          #0 0x5596c8b56093 in wsrep_server_gtid_t wsrep_get_SE_checkpoint<wsrep_server_gtid_t>() /source/sql/wsrep_xid.cc:201:3
       
      SUMMARY: MemorySanitizer: use-of-uninitialized-value /source/sql/wsrep_xid.cc:257:56 in wsrep_xid_print(xid_t const*)
      

      test failures:

      • galera.galera_var_ignore_apply_errors
      • galera.versioning_trx_id
      • galera.galera_sst_mariabackup_encrypt_with_key_server
      • galera.galera_unicode_pk
      • galera.galera_wan_restart_sst
      • etc (~44 of them)

      Attachments

        Issue Links

          Activity

            People

              janlindstrom Jan Lindström
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 3h
                  3h
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h
                  3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.