MDEV-37809: MSAN error under galera

wsrep_init_thd_for_schema is called directly
after new THD, so thd->thr_create_utime is uninitialized.

Correct by initializing to the microsecond time
microsecond_interval_timer().